# oil-gas-labs

./: .gitignore  README.md  pyproject.toml
lab1/: README.md  analyze_results.py  solution.ipynb  solution.py
lab1/clustering/data/: coordinates.xlsx
task0/: README.md  solution.ipynb  solution.py
task0/clustering/: clustering.ipynb  dtw.ipynb  dtw.xlsx
task0/clustering/hw/: coords.csv
task0/example/: notebook.py
task1/: README.md  solution.ipynb  solution.py
task1/example/: autogluon_solution.py  baseline.ipynb  baseline.py  forecasting.py
task1/example/data/: fcst.csv  test.csv
task2/: README.md  pred.csv  solution.ipynb  solution.py  solution_ens.py
task2/example/: autogluon_solution.py  baseline.ipynb  baseline.py
task2/example/data/train_test/: 208-901.las  208-902.las  209-901.las  209-902.las  209-903.las  209-904.las  209-905.las  209-906.las  210-901.las  210-902.las  210-903.las  210-904.las  210-905.las  210-906.las  210-907.las  210-908.las  210-909.las  210-910.las  211-901.las  211-902.las  211-903.las  211-904.las  211-905.las  211-906.las  211-907.las  211-908.las  211-909.las  211-910.las  211-911.las  211-912.las  211-913.las  211-914.las  212-901.las  212-902.las  212-903.las  212-904.las  212-905.las  212-906.las  212-907.las  212-908.las  (+950 more)
