[project]
name = "oil-gas-labs"
version = "0.1.0"
description = "Lab Works for Oil&Gas Industry Course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bottleneck>=1.6.0",
    "lasio>=0.32",
    "marimo>=0.19.4",
    "notebook>=7.5.2",
    "tqdm>=4.67.1",
    "tslearn>=0.7.0",
]

[dependency-groups]
automl = [
    "autogluon>=1.5.0",
]
